Feat: Added Reset-Password Endpoint to Reset User's Password